  - NEW: add instruction for using intel c++ compiler, which usually improve
   performance by 20% to 30%.		
  - BUG: recombinator set sex in a wrong way.
  - NEW: experimental large pedigree sampling largePedigreeSample
  - NEW: experimental support for merlin/vc and merlin regression
  - CHG (internal): overhaul of ascertainment operators and file save stuff.


version 0.7.3 - (Rev 470) Oct 2, 2006
  - CHG: change the allele type of long module to unsigned short, since
		2^16 seems to be enough even for long allele cases.
  - NEW: add -c option to simuCluster.py to allow it to se command instead
		of the default qaub
  - NEW: add reference count debugging in simulator.evolve (require
		specially built python.)
  - BUG: fix memory leaks in stator, util.cpp (pyExec) and simuPOP_common.i
  - NEW: add pyMating operator
  - NEW: add population::individuals() function that can be used to iterate
		through all individuals (or in a subpopulation).
  - NEW: add pyIndOperator


version 0.7.2 - (Rev 412) - Not publically released
  - CHG: remove demo and support for scipy's gplt package.
  - NEW: add infoFields parameter to population and operators
  - CHG: all populations must now explicitly state the information
		fields for each individual.
  - CHG: all qtrait and penetrance oeprators now use info fields of
		individuals (they use variable before). penetrance field is
		optional.
  - CHG: (Internal) selectors now use info field (fitness) rather than
		using its own population variable.
  - NEW: add --useDefault parameter to use default parameters instead of
		reading from stdin, if they can not be obtained from other methods.
  - NEW: simuCluster.py now subst environmental variables, and stops if
		there is remaining $ in the script.
  - CHG: make 'configName' and 'prompt' of simuOpt options obsolete, use
		'label' instead.
  - BUG: fix starting allele problem in simuCDCV.py


version 0.7.1 - (Rev 378) - Aug 20, 2006
  - BUG: Fix a bug in backward trajectory simulation